# runtime

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  OWNERS  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  download_3rd_party.py  install_deps.sh  pre-smoking-testcase  version.cmake  version.info
cmake/device/: CMakeLists.txt
example/3_memory_advanced/memory_pool/1_soma_reuse/: CMakeLists.txt  README.md  main.cpp  run.sh
src/dfx/adump/adump/: CMakeLists.txt  adx_dump_process.cpp  adx_dump_process.h  adx_dump_record.cpp  adx_dump_record.h
src/dfx/msprof/: CMakeLists.txt
src/dfx/msprof/collector/: CMakeLists.txt
src/dfx/trace/cpu_detect/: CMakeLists.txt  cpu_detect.c  cpu_detect_core.c  cpu_detect_core.h  cpu_detect_print.h  cpu_detect_test.c  cpu_detect_test.h
src/runtime/c/feature/: CMakeLists.txt
src/tsd/: CMakeLists.txt
src/tsd/basic_component/capability/: capability_manager.cpp  capability_manager.h
src/tsd/basic_component/device_comm/: device_comm.cpp  device_comm.h  device_comm_agent.cpp  device_comm_agent.h  hdc_client.cpp  hdc_client.h  hdc_common.cpp  hdc_common.h  tsd_hdc_client.h  tsd_hdc_common.h  tsd_version_verify.h  version_verify.cpp
src/tsd/basic_component/message_builder/: hdc_message_builder.cpp  hdc_message_builder.h
src/tsd/basic_component/message_rsp_handler/: message_parse_client.cpp  message_parse_interface.cpp  tsd_message_parse_client.h  tsd_message_parse_interface.h  tsd_msg_parse_reg.h
src/tsd/common/: basic_define.h  error_code.h  weak_ascend_hal.h  weak_log.h
src/tsd/common/inc/: aicpu_package_process.h  aicpu_process_package_worker.h  aicpu_thread_package_worker.h  base_package_worker.h  basic_define.h  common_sink_package_worker.h  domain_socket_client.h  domain_socket_common.h  domain_socket_server.h  driver_extend_package_worker.h  dshape_package_worker.h  error_code.h  hdc_client.h  hdc_common.h  hdc_server.h  internal_api.h  log.h  message_parse_client.h  message_parse_interface.h  message_parse_server.h  msg_parse_reg.h  om_package_worker.h  package_process_config.h  package_verify.h  package_worker.h  package_worker_factory.h  package_worker_utils.h  process_util_common.h  process_util_server.h  runtime_package_worker.h  tsd_feature_ctrl.h  tsd_hash_verify.h  tsd_message_parse_client.h  tsd_message_parse_interface.h  tsd_message_parse_server.h  tsd_msg_parse_reg.h  tsd_path_mgr.h  tsd_util.h  tsd_version_verify.h  version_verify.h  (+2 more)
src/tsd/common/proto/: tsd_message.proto
src/tsd/common/src/: aicpu_package_process.cpp  aicpu_process_package_worker.cpp  aicpu_thread_package_worker.cpp  base_package_worker.cpp  common_sink_package_worker.cpp  domain_socket_client.cpp  domain_socket_common.cpp  domain_socket_server.cpp  driver_extend_package_worker.cpp  dshape_package_worker.cpp  hdc_client.cpp  hdc_common.cpp  hdc_server.cpp  internal_api.cpp  log.cpp  message_parse_client.cpp  message_parse_interface.cpp  message_parse_server.cpp  om_package_worker.cpp  package_process_config.cpp  package_verify.cpp  package_worker.cpp  package_worker_factory.cpp  package_worker_utils.cpp  process_util_common.cpp  process_util_server.cpp  runtime_package_worker.cpp  stub_compile_mode_tsd.cpp  tsd_hash_verify.cpp  tsd_path_mgr.cpp  version_verify.cpp
src/tsd/common/stub/: error_manager.h
src/tsd/interface/: tsd_client.cpp
src/tsd/pub_facility/env_manager/: env_internal_api.cpp  env_internal_api.h
src/tsd/pub_facility/tsdlog/: log.h  tsd_log.h
src/tsd/pub_facility/util_func/: tsd_scope_guard.h  tsd_sha256.cpp  tsd_sha256.h  tsd_util_func.cpp  tsd_util_func.h
src/tsd/tsdclient/: CMakeLists.txt
src/tsd/tsdclient/inc/: aicpu_thread_mode_manager.h  client_manager.h  plugin_pkg_version.h  process_mode_manager.h  process_shared_context.h  response_msg_dispatcher.h  sub_process_controller.h  thread_mode_manager.h  tsd_event_interface.h  tsd_process_controller.h
src/tsd/tsdclient/src/: aicpu_thread_mode_manager.cpp  client_manager.cpp  env_internal_api.h  plugin_pkg_version.cpp  process_mode_base.cpp  process_mode_manager.cpp  process_mode_msg_parse.cpp  response_msg_dispatcher.cpp  sub_process_controller.cpp  thread_mode_manager.cpp  tsd_client.cpp  tsd_process_controller.cpp
stub/: CMakeLists.txt  gen_stubapi.py
tests/ut/adump/ut/: CMakeLists.txt
tests/ut/msprof/: CMakeLists.txt
tests/ut/msprof/acp/: CMakeLists.txt
tests/ut/msprof/app/: CMakeLists.txt
tests/ut/msprof/avp/: CMakeLists.txt
tests/ut/msprof/common/: CMakeLists.txt
tests/ut/msprof/device/: CMakeLists.txt
tests/ut/msprof/driver/: CMakeLists.txt
tests/ut/msprof/job_wrapper/: CMakeLists.txt
tests/ut/msprof/message/: CMakeLists.txt
tests/ut/msprof/msprof/: CMakeLists.txt
tests/ut/msprof/msprofbin/: CMakeLists.txt
tests/ut/msprof/profapi/: CMakeLists.txt
tests/ut/msprof/profhal/: CMakeLists.txt
tests/ut/msprof/st/: CMakeLists.txt
tests/ut/msprof/stub/: adx_prof_api_stub.cpp  c_base_error_manager_stub.cpp  devdrv_runtime_api_stub.cpp  error_manager_stub.cpp  error_manager_stub2.cpp  hdc-api-stub.h  hdc-log-stub.cpp  ide-cmd-stub.h  ide-common-util-stub.cpp  ide-common-util-stub.h  mmpa_stub.cpp  prof.json  prof_api_stub.cpp  sec_stub.cpp  tsd_stub.cpp  tsd_stub.h
tests/ut/msprof/stub_utest/: CMakeLists.txt
tests/ut/msprof/transport/: CMakeLists.txt
tests/ut/msprof/ut/: CMakeLists.txt
tests/ut/platform/st/: CMakeLists.txt
tests/ut/queue_schedule/: CMakeLists.txt
tests/ut/queue_schedule/st/: CMakeLists.txt
tests/ut/queue_schedule/stub/: dlopen_stub.cpp  dlopen_stub.h  driver_stub.cpp  drv_buf_api.cpp  easy_comm.h  easy_comm_stub.cpp  event_sched_api.cpp  hccl_stub.cpp  marker.h  marker_stub.cpp  msprof_stub.cpp  msprof_stub.h  profile_common.h  profile_common_stub.cpp  profile_stub.cpp  profiler.h  profiling_stub.cpp  queue_api.cpp  queue_schedule_stub.cpp  queue_schedule_stub.h  slog_stub.cpp
tests/ut/tsd/: CMakeLists.txt
(+7021 files in other folders)
